--- a/todo
+++ b/todo
@@ -7,16 +7,22 @@
 7. Fix front page to use variables. 
 8. Document everything (eff)
 
-  {% comment %}
+  
   {% if page.layout == "timeline" %}
-  {% capture today %}{{site.time | date: "%F"}}{% endcapture %}
-  {% for post in site.categories.class %}
-    {% capture datestamp %}{{post.date | date: "%F"}}{% endcapture %}
-    {% if %}
-  {% endfor %}
-  <meta http-equiv="refresh" content="1; url={{  }}">
-        <script type="text/javascript">
-            window.location.href = "http://example.com"
-        </script>
+      {% capture today %}{{site.time | date: "%F"}}{% endcapture %}
+      {% for post in site.categories.class reversed %}
+          {% capture datestamp %}{{post.date | date: "%F"}}{% endcapture %}
+          {% if datestamp == today %}
+              {% capture hashurl %}{{ post.id | replace: "/", "-" | prepend: "#event" }}{% endcapture %} 
+          {% else %}
+            {% continue %}
+          {% endif %}
+      {% endfor %}
   {% endif %}
-  {% endcomment %}
+  
+    <script type="text/javascript"> 
+  // Redirect to "#about" if there is no hash in the URL. 
+    if (window.location.hash == '') { 
+      window.location.href = '{{ hashurl | prepend: site.baseurl | prepend: site.url }}'; 
+    } 
+  </script>
