--- a/_posts/2017-07-25-reveal-js.md
+++ b/_posts/2017-07-25-reveal-js.md
@@ -7,6 +7,7 @@ tags:
 - presentations
 - pandoc
 category: class
+quiz: https://goo.gl/forms/3JV4trozyz3ItaJ03
 ---
 
 Today we will look at Reveal.js more closely and start working with it in your presentation teams. 
